[package]
name = "slices_dispatch_wide"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0 OR Zlib"
description = "A macro to dispatch vectorized math over slices using the `wide` crate for SIMD operations"
keywords = ["simd", "math", "wide", "macro"]
categories = ["mathematics", "hardware-support"]
readme = "README.md"
homepage = "https://github.com/zachmatson/slices_dispatch_wide"
repository = "https://github.com/zachmatson/slices_dispatch_wide"
documentation = "https://docs.rs/slices_dispatch_wide"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wide = "0.7.4"
paste = "1"
itertools = "0.10"
